# fastapi-async-sqla

./: CHANGELOG.md  LICENSE  README.md  fastapi_async_sqla.py  pyproject.toml
.github/actions/: uv.yml
.github/uv/: action.yml
.github/workflows/: ci.yml  publish.yml  release.yml  uv.yml
tests/: conftest.py
tests/integration/: conftest.py  test_base.py  test_pagination.py  test_session_dependency.py
tests/unit/: test_lifespan.py  test_open_session.py
