[tool.poetry]
name = "fastapi-async-sqla"
version = "0.0.3"
description = "SQLAlchemy extension for FastAPI with support for asyncio, pagination & more, ready for production."
authors = ["y"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
structlog = "^24.2.0"
sqlalchemy = { version = ">=2,<3", extras = ["asyncio"] }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
coverage = "^7.5.4"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
asgi-lifespan = "^2.1.0"
ruff = "^0.4.10"
faker = "^25.9.1"
pytest-watch = { git = "https://git@github.com/styleseat/pytest-watch.git", rev = "0342193" }
toml = "^0.10.2"
aiosqlite = "^0.20.0"
fastapi = "^0.112.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = 'auto'

[tool.coverage.run]
branch = true
omit = ["tests/*", ".venv/*"]
concurrency = ["thread", "greenlet"]
