[project]
name = "FastAPI-Async-SQLA"
version = "0.2.0"
description = "SQLAlchemy extension for FastAPI with support for asynchronous SQLAlchemy sessions and pagination."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Hadrien David", email = "hadrien@ectobal.com" }]
dependencies = ["sqlalchemy[asyncio]>=2.0.34,<3", "structlog>=24.4.0"]
license = { text = "MIT License" }

[tool.uv]
package = true
dev-dependencies = [
    "asgi-lifespan>=2.1.0",
    "coverage>=7.6.1",
    "faker>=28.4.1",
    "httpx>=0.27.2",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-watch",
    "ruff>=0.6.4",
    "toml>=0.10.2",
    "aiosqlite>=0.20.0",
    "fastapi>=0.114.0",
    "python-semantic-release>=9.8.8",
    "twine>=5.1.1",
]

[tool.uv.sources]
pytest-watch = { git = "https://github.com/styleseat/pytest-watch", rev = "0342193" }

[tool.pytest.ini_options]
asyncio_mode = 'auto'

[tool.coverage.run]
branch = true
omit = ["tests/*", ".venv/*"]
concurrency = ["thread", "greenlet"]

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
